# reelin

./: .gitignore  CLAUDE.md  Makefile  Pipfile  README.md  pyproject.toml  requirements-image.txt  requirements.txt  resume  setup_local_llms.sh
config/: models.yaml  pipeline.yaml  veo_guide_snapshot.json
docs/: HOWTO.md
reel/: __init__.py  cli.py  fountain.py  gate.py  gemini.py  i2v.py  imagegen.py  llm.py  manifest.py  models.py  pipeline.py  secrets.py  stages.py  stock.py  veo_guide.py
reel/agents/: __init__.py  casting.py  characters.py  cinematography.py  fidelity.py  genre.py  ingest.py  moodboard.py  scenes.py  screenplay.py  soundscape.py  storyboard.py  structure.py  visuals.py
samples/: sample_story.txt
scripts/: install-cron.sh  update-models.sh
src/: __init__.py  cli.py
src/agents/: __init__.py  assembly_agent.py  audio_agent.py  base_agent.py  character_agent.py  effects_agent.py  genre_agent.py  renderer_agent.py  review_agent.py  screenplay_agent.py
src/config/: __init__.py  settings.py
src/llm/: __init__.py  model_registry.py  ollama_provider.py  router.py
src/pipeline/: __init__.py  orchestrator.py  stage_defaults.py  state.py
src/prompts/: __init__.py  templates.py
src/rendering/: image_generator.py  video_generator.py
src/utils/: __init__.py  token_tracker.py
