[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reel-factory"
version = "0.2.0"
description = "AI-powered agentic pipeline for generating short-form video reels from scripts"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "moviepy>=1.0",
    "Pillow>=10.0",
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
crewai = ["crewai>=0.28.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = [
    "crewai>=0.28.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "elevenlabs>=0.2",
    "replicate>=0.25",
]

[project.scripts]
reel-factory = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"